; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/extr_ip_fw_sockopt.c_ipfw_reap_rules.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/extr_ip_fw_sockopt.c_ipfw_reap_rules.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ip_fw = type { %struct.ip_fw* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ipfw_reap_rules(%struct.ip_fw* %0) #0 {
  %2 = alloca %struct.ip_fw*, align 8
  %3 = alloca %struct.ip_fw*, align 8
  store %struct.ip_fw* %0, %struct.ip_fw** %2, align 8
  br label %4

4:                                                ; preds = %7, %1
  %5 = load %struct.ip_fw*, %struct.ip_fw** %2, align 8
  store %struct.ip_fw* %5, %struct.ip_fw** %3, align 8
  %6 = icmp ne %struct.ip_fw* %5, null
  br i1 %6, label %7, label %13

7:                                                ; preds = %4
  %8 = load %struct.ip_fw*, %struct.ip_fw** %2, align 8
  %9 = getelementptr inbounds %struct.ip_fw, %struct.ip_fw* %8, i32 0, i32 0
  %10 = load %struct.ip_fw*, %struct.ip_fw** %9, align 8
  store %struct.ip_fw* %10, %struct.ip_fw** %2, align 8
  %11 = load %struct.ip_fw*, %struct.ip_fw** %3, align 8
  %12 = call i32 @ipfw_free_rule(%struct.ip_fw* %11)
  br label %4

13:                                               ; preds = %4
  ret void
}

declare dso_local i32 @ipfw_free_rule(%struct.ip_fw*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
